# micservices

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
3rd/libuv/lib/: libuv.so.1.0.0
3rd/stb/: stb_image.h
3rd/zxing/lib/: libZXing.so.2.2.1  libZXing.so.3
sources/: client.cpp  main.cpp
sources/core/: base_services.cpp  base_services.h  base_window.cpp  base_window.h  connection.cpp  connection.h  log.h  screen_capture.cpp  screen_capture.h  types.h  utils.cpp  utils.h  window_manager.cpp  window_manager.h
sources/services/: endpoint.cpp  endpoint.h  qrcode.h  router.cpp  router.h  scan_qrcode.h  totp.h
